--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,13 @@ jobs:
       - name: Run tests
         run: pytest tests/
 
-      - name: Upload model artifact
+      - name: Upload MLflow run artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: mlflow-artifacts
+          path: ./mlruns
+
+      - name: Upload best model file
         uses: actions/upload-artifact@v3
         with:
           name: delivery-model
