--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-numpy == 2.3.0
-pandas == 2.3.0
-
-seaborn == 0.12.0
-plotly == 6.1.2
-matplotlib == 3.10.3
-scikit-learn == 1.7.0
-xgboost
-pytest
+numpy==1.26.4
+pandas==2.3.0
+seaborn==0.12.0
+plotly==6.1.2
+matplotlib==3.10.3
+scikit-learn==1.7.0
+xgboost==1.7.6
 mlflow==2.11.3
+pytest==8.1.1
