--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,10 +1,8 @@
 name: CD Pipeline
 
 on:
-  workflow_run:
-    workflows: ["CI Pipeline"]
-    types:
-      - completed
+  push:
+    branches: [ main ]
 
 jobs:
   upload-artifacts:
